started working at the basic layout and functions of GamboardUI class